syntax = "proto3" ;

option java_package = "com.orgo.android";
option java_multiple_files = true;

message SavedUserToken{
  string accessToken = 1;
  string refreshToken= 2;
  string socialType = 3;
}